<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/currency_converter"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/my_balances"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/balance_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/currency_exchange"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/circle_red_arrow_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:text="@string/sell"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                app:boxBackgroundMode="none"/>

            <Spinner
                android:id="@+id/from_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="200dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:rotation="180"
                android:src="@mipmap/circle_green_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:text="@string/receive"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_receive_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:gravity="right"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/to_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="200dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/submit"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
